# passible

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_skeleton.sh
etc/passible/: conf.yml
src/: bpf_loader.c  bpf_loader.h  config.c  config.h  event_handler.c  event_handler.h  logging.c  logging.h  main.c  types.h
src/bpf/: event.h  passible.bpf.c
